Added test-setup for registration user

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ markers =
     login_page: marker for testing login page
     main_page: marker for testing main page
     product_page: marker for testing product page
+    basket_page: marker for testing basket page
